--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description"
+      content="Introducing our user-friendly booking app, designed to make the process of renting Agricultural, Transport and construction equipment as simple and hassle-free as possible. With just a few taps on your phone, you can browse our extensive selection of tractors, backhoe loaders, trucks, lorries, and other equipment, and book the one that suits your project requirements.">
+    <meta name="keywords"
+      content="booking app, agricultural equipment, transport equipment, construction equipment, tractors, backhoe loaders, trucks, lorries, project requirements">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
