--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
+    <script>
+      window.chatwootSettings = {"position":"right","type":"standard","launcherTitle":"Chat with us"};
+      (function(d,t) {
+        var BASE_URL="https://app.chatwoot.com";
+        var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+        g.src=BASE_URL+"/packs/js/sdk.js";
+        g.defer = true;
+        g.async = true;
+        s.parentNode.insertBefore(g,s);
+        g.onload=function(){
+          window.chatwootSDK.run({
+            websiteToken: 'Br2vHgeLLqPvP8BKqebfHJ9A',
+            baseUrl: BASE_URL
+          })
+        }
+      })(document,"script");
+    </script>
+    
     <title>All Wheels</title>
   </head>
   <body>
